@@ -121,3 +121,21 @@ Check for DimNames propagation in coercion and other operations.
 
 - make sure  M[FALSE, FALSE]  works for all Matrices
   {e.g. fails for M <- Diagonal(4)}
+
+- <sparse> %*% <dense>  {also in crossprod/tcrossprod}  currently always
+  returns <dense>, since --> Csparse_dense_prod --> cholmod_sdmult
+  and that does only return dense.
+  When the sparse matrix is very sparse, i.e. has many rows with only zero
+  entries, it would make much sense to return sparse.
+
+- sparse-symmetric + diagonal should stay sparse-symmetric
+  (only stays sparse): Matrix(0, 4, 4) + Diagonal(4, 1:4)
+
+- For a square sparse matrix 'b' {typically dgCMatrix or dgTMatrix},
+  we'd want a function  "Mat_plus_t_Mat" <- function(b) {....}
+  which computes the symmetric sparse matrix   b + t(b)
+  in way that never works with size-doubled vectors from  b@i etc..
+
+- ! <symmetricMatrix>  loses symmetry, both for dense and sparse matrices.
+  !M  where M is "sparseMatrix", currently always gives dense. This only
+  makes sense when M is ``really sparse''.
