@@ -82,13 +82,13 @@ mC[1:2,]
 mC[7,  drop = FALSE]
 assert.EQ.mat(mC[1:2,], mm[1:2,])
 
-## *repeated* indices - did not work at all ...
+## *repeated* (aka 'duplicated') indices - did not work at all ...
 i <- rep(8:10,2)
 j <- c(2:4, 4:3)
 assert.EQ.mat(mC[i,], mm[i,])
 assert.EQ.mat(mC[,j], mm[,j])
 assert.EQ.mat(mC[i, 2:1], mm[i, 2:1])
-assert.EQ.mat(mC[c(4,1), j], mm[c(4,1), j])
+assert.EQ.mat(mC[c(4,1,2:1), j], mm[c(4,1,2:1), j])
 assert.EQ.mat(mC[i,j], mm[i,j])
 set.seed(7)
 for(n in 1:50) {
@@ -96,13 +96,25 @@ for(n in 1:50) {
     j <- sample(sample(ncol(mC), 6), 17, replace = TRUE)
     assert.EQ.mat(mC[i,j], mm[i,j])
 }
-## symmetric index of symmetric matrix 000 not yet  ok
+## symmetric index of symmetric matrix --- not yet  ok
 m. <- mC; m.[, c(2, 7:12)] <- 0
-validObject(S <- crossprod(m.) %% 100)
+validObject(S <- crossprod(add.simpleDimnames(m.) %% 100))
 ss <- as(S, "matrix")
 T <- as(S, "TsparseMatrix")
-i <- c(4:2,7) ;  assert.EQ.mat(T[i,i], ss[i,i])
+## non-repeated indices:
 i <- c(7:5, 2:4);assert.EQ.mat(T[i,i], ss[i,i])
+N <- nrow(T)
+set.seed(11)
+for(n in 1:50) {
+    i <- sample(N, max(2, sample(N,1)), replace = FALSE)
+    validObject(Tii <- T[i,i])
+    stopifnot(is(Tii, "dsTMatrix"), # remained symmetric Tsparse
+              identical(t(Tii), t(T)[i,i]))
+    assert.EQ.mat(Tii, ss[i,i])
+}
+
+## repeeated ones:
+j <- c(4, 4, 9, 12, 9, 4, 17, 3, 18, 4, 12, 18, 4, 9)
 if(FALSE) ## FIXME
 assert.EQ.mat(T[j,j], ss[j,j])
 
@@ -150,6 +162,15 @@ stopifnot(class(l10) == "lsCMatrix", # symmetric indexing -> symmetric !
           identical(as.mat(l10), m.x[1:10, 1:10] != 0),
           identical(as.mat(l3 ), m.x[1:3, ] != 0)
           )
+
+##-- Sub*assignment* with repeated / duplicated index:
+A <- Matrix(0,4,3) ; A[c(1,2,1), 2] <- 1 ; A
+B <- A;              B[c(1,2,1), 2] <- 1:3; B
+stopifnot(identical(unname(as.matrix(A)),
+		    local({a <- matrix(0,4,3); a[c(1,2,1), 2] <-  1 ; a})),
+	  identical(unname(as.matrix(B)),
+		    local({a <- matrix(0,4,3); a[c(1,2,1), 2] <- 1:3; a})))
+
 
 ## used to fail
 n <- 5 ## or much larger
