@@ -1,5 +1,5 @@
 
-R version 2.5.0 RC (2007-04-17 r41208)
+R version 2.5.0 Patched (2007-05-07 r41475)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -172,13 +172,13 @@ Formal class 'dgTMatrix' [package "Matrix"] with 6 slots
 [1,] 7 . . . . . . 287 . . 407 . 487 527 . . . . 727 .
 > assert.EQ.mat(mC[1:2,], mm[1:2,])
 > 
-> ## *repeated* indices - did not work at all ...
+> ## *repeated* (aka 'duplicated') indices - did not work at all ...
 > i <- rep(8:10,2)
 > j <- c(2:4, 4:3)
 > assert.EQ.mat(mC[i,], mm[i,])
 > assert.EQ.mat(mC[,j], mm[,j])
 > assert.EQ.mat(mC[i, 2:1], mm[i, 2:1])
-> assert.EQ.mat(mC[c(4,1), j], mm[c(4,1), j])
+> assert.EQ.mat(mC[c(4,1,2:1), j], mm[c(4,1,2:1), j])
 > assert.EQ.mat(mC[i,j], mm[i,j])
 > set.seed(7)
 > for(n in 1:50) {
@@ -186,14 +186,26 @@ Formal class 'dgTMatrix' [package "Matrix"] with 6 slots
 +     j <- sample(sample(ncol(mC), 6), 17, replace = TRUE)
 +     assert.EQ.mat(mC[i,j], mm[i,j])
 + }
-> ## symmetric index of symmetric matrix 000 not yet  ok
+> ## symmetric index of symmetric matrix --- not yet  ok
 > m. <- mC; m.[, c(2, 7:12)] <- 0
-> validObject(S <- crossprod(m.) %% 100)
+> validObject(S <- crossprod(add.simpleDimnames(m.) %% 100))
 [1] TRUE
 > ss <- as(S, "matrix")
 > T <- as(S, "TsparseMatrix")
-> i <- c(4:2,7) ;  assert.EQ.mat(T[i,i], ss[i,i])
+> ## non-repeated indices:
 > i <- c(7:5, 2:4);assert.EQ.mat(T[i,i], ss[i,i])
+> N <- nrow(T)
+> set.seed(11)
+> for(n in 1:50) {
++     i <- sample(N, max(2, sample(N,1)), replace = FALSE)
++     validObject(Tii <- T[i,i])
++     stopifnot(is(Tii, "dsTMatrix"), # remained symmetric Tsparse
++               identical(t(Tii), t(T)[i,i]))
++     assert.EQ.mat(Tii, ss[i,i])
++ }
+> 
+> ## repeeated ones:
+> j <- c(4, 4, 9, 12, 9, 4, 17, 3, 18, 4, 12, 18, 4, 9)
 > if(FALSE) ## FIXME
 + assert.EQ.mat(T[j,j], ss[j,j])
 > 
@@ -328,6 +340,27 @@ Formal class 'dgTMatrix' [package "Matrix"] with 6 slots
 +           identical(as.mat(l10), m.x[1:10, 1:10] != 0),
 +           identical(as.mat(l3 ), m.x[1:3, ] != 0)
 +           )
+> 
+> ##-- Sub*assignment* with repeated / duplicated index:
+> A <- Matrix(0,4,3) ; A[c(1,2,1), 2] <- 1 ; A
+4 x 3 sparse Matrix of class "dgCMatrix"
+          
+[1,] . 1 .
+[2,] . 1 .
+[3,] . . .
+[4,] . . .
+> B <- A;              B[c(1,2,1), 2] <- 1:3; B
+4 x 3 sparse Matrix of class "dgCMatrix"
+          
+[1,] . 3 .
+[2,] . 2 .
+[3,] . . .
+[4,] . . .
+> stopifnot(identical(unname(as.matrix(A)),
++ 		    local({a <- matrix(0,4,3); a[c(1,2,1), 2] <-  1 ; a})),
++ 	  identical(unname(as.matrix(B)),
++ 		    local({a <- matrix(0,4,3); a[c(1,2,1), 2] <- 1:3; a})))
+> 
 > 
 > ## used to fail
 > n <- 5 ## or much larger
@@ -801,5 +834,5 @@ Ambiguous method selection for "!=", target "numeric#dgCMatrix" (the first of th
 + 	  )
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  11.792 0.108 12.138 0 0 
+Time elapsed:  8.036 0.15 9.111 0 0 
 > 
